test/src/e2e_vm_tests/test_programs/should_fail/struct_field_privacy_field_access/src/lib.sw
library;

pub struct LibStruct {
    pub x: u64,
    y: u64,
    pub other: LibOtherStruct,
}

impl LibStruct {
    pub fn new() -> Self {
        Self { x: 0, y: 0, other: LibOtherStruct { x: 0, y: 0 } }
    }
}

pub struct LibOtherStruct {
    pub x: u64,
    y: u64,
}

impl LibOtherStruct {
    pub fn new() -> Self {
        Self { x: 0, y: 0 }
    }
}